ws_t3/log/build_2026-07-15_11-40-27/t3_pose_estimation/stderr.log
CMake Deprecation Warning at CMakeLists.txt:1 (cmake_minimum_required):
  Compatibility with CMake < 3.10 will be removed from a future version of
  CMake.

  Update the VERSION argument <min> value.  Or, use the <min>...<max> syntax
  to tell CMake that the project requires at least <min> but has been updated
  to work with policies introduced by <max> or earlier.


/home/el-system/Documents/T3/ws_t3/src/t3_pose_estimation/src/pose_estimator_node.cpp: In member function ‘void PoseEstimatorNode::on_frame(t3_interfaces::msg::FrameInfo_<std::allocator<void> >::SharedPtr)’:
/home/el-system/Documents/T3/ws_t3/src/t3_pose_estimation/src/pose_estimator_node.cpp:138:12: error: invalid array assignment
  138 |         u_ = last_u_;
      |         ~~~^~~~~~~~~
/home/el-system/Documents/T3/ws_t3/src/t3_pose_estimation/src/pose_estimator_node.cpp:142:17: error: invalid array assignment
  142 |         last_u_ = u_;
      |         ~~~~~~~~^~~~
gmake[2]: *** [CMakeFiles/pose_estimator_node.dir/build.make:79: CMakeFiles/pose_estimator_node.dir/src/pose_estimator_node.cpp.o] Error 1
gmake[1]: *** [CMakeFiles/Makefile2:188: CMakeFiles/pose_estimator_node.dir/all] Error 2
gmake[1]: *** Waiting for unfinished jobs....
gmake: *** [Makefile:146: all] Error 2
